# bazel-learning

./: .gitmodules  readme.adoc
beginning_bazel/: readme.adoc
beginning_bazel/chapter_03/src/: BUILD.bazel
beginning_bazel/chapter_04/: WORKSPACE
beginning_bazel/chapter_04/src/: BUILD.bazel  IntMultiplier.java
beginning_bazel/chapter_05/src/: BUILD.bazel  TransmissionObject.java  echo_server.go
beginning_bazel/chapter_06/src/: BUILD.bazel  echo_server.go  transmission_object.proto
beginning_bazel/chapter_07/: WORKSPACE
beginning_bazel/chapter_07/server/echo_server/: BUILD.bazel
beginning_bazel/chapter_08/: WORKSPACE
beginning_bazel/chapter_08/client/echo_client/command_line/: EchoClient.java
beginning_bazel/chapter_08/proto/: BUILD.bazel
beginning_bazel/chapter_08/server/echo_server/: echo_server.go
chapter_03/src/: HelloWorld.java
chapter_04/src/: .BUILD.bazel.swp  IntMultiplierTest.java  hello_world.go
chapter_05/: WORKSPACE
chapter_05/src/: EchoClient.java  transmission_object.go
chapter_06/: repositories.bzl
chapter_07/client/echo_client/command_line/: BUILD.bazel  EchoClient.java
chapter_07/proto/: BUILD.bazel
chapter_08/: BUILD.bazel
chapter_08/client/echo_client/command_line/: BUILD.bazel
chapter_08/proto/: transceiver.proto
chapter_08/server/echo_server/: BUILD.bazel  go.mod
rule/: BUILD  file.cc.tpl  foo.bzl  readme.adoc
