java_binary(
  name = "HelloWorld",
  srcs = ["HelloWorld.java"],
  deps = [":IntMultiplier"],
)

java_library(
  name = "IntMultiplier",
  srcs = ["IntMultiplier.java"],
)

java_test(
   name = "IntMultiplierTest",
   srcs = ["IntMultiplierTest.java"],
   deps = [
          ":IntMultiplier",
	  "//third_party:junit4"
		   ],
   test_class = "IntMultiplierTest",
)
