load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "transmission_object_proto",
    srcs = ["transmission_object.proto"],
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "transmission_object_java",
    deps = [":transmission_object_proto"],
)

java_binary(
    name = "EchoClient",
    srcs = ["EchoClient.java"],
    main_class = "EchoClient",
    deps = [":transmission_object_java"],
)

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "echo_server",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "transmission_object_go_proto",
    importpath = "chapter_06/transmission_object",
    proto = ":transmission_object_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "src_lib",
    srcs = ["echo_server.go"],
    importpath = "chapter_06/main",
    visibility = ["//visibility:private"],
    deps = [
        ":transmission_object_go_proto",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
