load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "echo_server",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)


go_library(
    name = "src_lib",
    srcs = ["echo_server.go"],
    importpath = "chapter_06/main",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:transmission_object_go_proto",
        "//proto:transceiver_go_proto_grpc",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)